# MCI

./: .gitignore  README.md  pyproject.toml
source/: 001_BGSU1004.txt.conllu
source/dictionaries/: de_adj.json  de_nouns.json  de_verbs.json  en_adj.json  en_nouns.json  en_verbs.json  it_adj.json  it_nouns.json  it_verbs.json  it_verbs_ends.json  norm_lemma.json  placeholder.json
src/mci/: eng_procedure.py  main.py  procedure.py  process.py  run_stanza.py  test.py  test_old.py  utils.py
